--- a/UI/main_window.ui
+++ b/UI/main_window.ui
@@ -46,7 +46,7 @@
      <enum>QTabWidget::Rounded</enum>
     </property>
     <property name="currentIndex">
-     <number>7</number>
+     <number>2</number>
     </property>
     <property name="elideMode">
      <enum>Qt::ElideLeft</enum>
@@ -4557,7 +4557,7 @@
      <enum>QFrame::StyledPanel</enum>
     </property>
     <property name="currentIndex">
-     <number>2</number>
+     <number>5</number>
     </property>
     <widget class="QWidget" name="page">
      <property name="geometry">
@@ -4565,7 +4565,7 @@
        <x>0</x>
        <y>0</y>
        <width>241</width>
-       <height>476</height>
+       <height>484</height>
       </rect>
      </property>
      <attribute name="label">
@@ -4578,7 +4578,7 @@
        <x>0</x>
        <y>0</y>
        <width>241</width>
-       <height>476</height>
+       <height>484</height>
       </rect>
      </property>
      <attribute name="label">
@@ -5212,7 +5212,7 @@
        <x>0</x>
        <y>0</y>
        <width>241</width>
-       <height>476</height>
+       <height>484</height>
       </rect>
      </property>
      <attribute name="label">
@@ -5489,6 +5489,9 @@
           </item>
           <item>
            <layout class="QHBoxLayout" name="horizontalLayout_6">
+            <property name="spacing">
+             <number>2</number>
+            </property>
             <item>
              <widget class="QRadioButton" name="radioButton_gr_sort">
               <property name="text">
@@ -5539,7 +5542,7 @@
        <x>0</x>
        <y>0</y>
        <width>241</width>
-       <height>476</height>
+       <height>484</height>
       </rect>
      </property>
      <attribute name="label">
@@ -5660,7 +5663,10 @@
           <widget class="QPushButton" name="Button_filter_gr">
            <property name="font">
             <font>
+             <family>Courier New</family>
              <pointsize>12</pointsize>
+             <weight>75</weight>
+             <bold>true</bold>
             </font>
            </property>
            <property name="text">
@@ -5669,24 +5675,13 @@
           </widget>
          </item>
          <item>
-          <spacer name="horizontalSpacer_11">
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>40</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-         <item>
           <widget class="QPushButton" name="Button_reset_filter_gr">
            <property name="font">
             <font>
              <family>Courier New</family>
              <pointsize>12</pointsize>
+             <weight>75</weight>
+             <bold>true</bold>
             </font>
            </property>
            <property name="text">
@@ -5704,7 +5699,7 @@
         <x>10</x>
         <y>0</y>
         <width>211</width>
-        <height>20</height>
+        <height>41</height>
        </rect>
       </property>
       <property name="font">
@@ -5859,7 +5854,7 @@
       <property name="geometry">
        <rect>
         <x>122</x>
-        <y>53</y>
+        <y>70</y>
         <width>108</width>
         <height>18</height>
        </rect>
@@ -5890,7 +5885,7 @@
       <property name="geometry">
        <rect>
         <x>9</x>
-        <y>30</y>
+        <y>47</y>
         <width>112</width>
         <height>46</height>
        </rect>
@@ -5957,7 +5952,7 @@
        <x>0</x>
        <y>0</y>
        <width>241</width>
-       <height>476</height>
+       <height>484</height>
       </rect>
      </property>
      <attribute name="label">
@@ -5969,7 +5964,7 @@
         <x>4</x>
         <y>98</y>
         <width>231</width>
-        <height>221</height>
+        <height>231</height>
        </rect>
       </property>
       <property name="font">
@@ -6100,7 +6095,10 @@
             <widget class="QPushButton" name="Button_filter_sf">
              <property name="font">
               <font>
+               <family>Courier New</family>
                <pointsize>12</pointsize>
+               <weight>75</weight>
+               <bold>true</bold>
               </font>
              </property>
              <property name="text">
@@ -6109,24 +6107,13 @@
             </widget>
            </item>
            <item>
-            <spacer name="horizontalSpacer">
-             <property name="orientation">
-              <enum>Qt::Horizontal</enum>
-             </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>40</width>
-               <height>20</height>
-              </size>
-             </property>
-            </spacer>
-           </item>
-           <item>
             <widget class="QPushButton" name="Button_reset_filter_sf">
              <property name="font">
               <font>
                <family>Courier New</family>
                <pointsize>12</pointsize>
+               <weight>75</weight>
+               <bold>true</bold>
               </font>
              </property>
              <property name="text">
@@ -6146,13 +6133,13 @@
         <x>10</x>
         <y>0</y>
         <width>211</width>
-        <height>20</height>
+        <height>41</height>
        </rect>
       </property>
       <property name="font">
        <font>
         <family>Times New Roman</family>
-        <pointsize>12</pointsize>
+        <pointsize>11</pointsize>
         <weight>75</weight>
         <italic>true</italic>
         <bold>true</bold>
@@ -6166,7 +6153,7 @@
       <property name="geometry">
        <rect>
         <x>122</x>
-        <y>53</y>
+        <y>70</y>
         <width>108</width>
         <height>18</height>
        </rect>
@@ -6197,7 +6184,7 @@
       <property name="geometry">
        <rect>
         <x>9</x>
-        <y>30</y>
+        <y>47</y>
         <width>112</width>
         <height>46</height>
        </rect>
@@ -6264,7 +6251,7 @@
        <x>0</x>
        <y>0</y>
        <width>241</width>
-       <height>476</height>
+       <height>484</height>
       </rect>
      </property>
      <attribute name="label">
@@ -6380,7 +6367,7 @@
           <widget class="QComboBox" name="comboBox_find_name_fin">
            <property name="font">
             <font>
-             <pointsize>11</pointsize>
+             <pointsize>10</pointsize>
             </font>
            </property>
            <property name="editable">
@@ -6517,6 +6504,8 @@
             <font>
              <family>Courier New</family>
              <pointsize>12</pointsize>
+             <weight>75</weight>
+             <bold>true</bold>
             </font>
            </property>
            <property name="text">
@@ -6525,24 +6514,13 @@
           </widget>
          </item>
          <item>
-          <spacer name="horizontalSpacer_7">
-           <property name="orientation">
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="sizeHint" stdset="0">
-            <size>
-             <width>40</width>
-             <height>20</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-         <item>
           <widget class="QPushButton" name="Button_reset_filter_fin">
            <property name="font">
             <font>
              <family>Courier New</family>
              <pointsize>12</pointsize>
+             <weight>75</weight>
+             <bold>true</bold>
             </font>
            </property>
            <property name="text">
@@ -6560,7 +6538,7 @@
         <x>10</x>
         <y>0</y>
         <width>211</width>
-        <height>20</height>
+        <height>41</height>
        </rect>
       </property>
       <property name="font">
@@ -6580,7 +6558,7 @@
       <property name="geometry">
        <rect>
         <x>122</x>
-        <y>53</y>
+        <y>70</y>
         <width>108</width>
         <height>18</height>
        </rect>
@@ -6605,9 +6583,9 @@
       <property name="geometry">
        <rect>
         <x>9</x>
-        <y>30</y>
+        <y>47</y>
         <width>112</width>
-        <height>46</height>
+        <height>51</height>
        </rect>
       </property>
       <property name="font">
@@ -6732,7 +6710,7 @@
        <x>0</x>
        <y>0</y>
        <width>241</width>
-       <height>476</height>
+       <height>484</height>
       </rect>
      </property>
      <attribute name="label">
@@ -7102,7 +7080,7 @@
        <x>0</x>
        <y>0</y>
        <width>241</width>
-       <height>476</height>
+       <height>484</height>
       </rect>
      </property>
      <attribute name="label">
@@ -7623,9 +7601,9 @@
     <property name="geometry">
      <rect>
       <x>260</x>
-      <y>437</y>
+      <y>747</y>
       <width>842</width>
-      <height>341</height>
+      <height>31</height>
      </rect>
     </property>
    </widget>
@@ -7633,26 +7611,10 @@
     <property name="geometry">
      <rect>
       <x>260</x>
-      <y>452</y>
+      <y>352</y>
       <width>821</width>
-      <height>311</height>
+      <height>431</height>
      </rect>
-    </property>
-   </widget>
-   <widget class="QFrame" name="frame_3">
-    <property name="geometry">
-     <rect>
-      <x>610</x>
-      <y>590</y>
-      <width>234</width>
-      <height>141</height>
-     </rect>
-    </property>
-    <property name="frameShape">
-     <enum>QFrame::StyledPanel</enum>
-    </property>
-    <property name="frameShadow">
-     <enum>QFrame::Raised</enum>
     </property>
    </widget>
   </widget>
